static/style.css
/* ... */
#sidenav-left {
  float: left;
  left: 0;
  font-weight: bold;
  font-size: 32px;
  top: 0;
  margin-left: 12px;
}
#sidenav-right {
  float: right;
  right: 0;
}
#sidenav-right > * {
  margin-left: 16px;
}
#year-nav {
  text-align: right;
}
#year-nav a.active {
  text-align: right;
  color: #990000;
  cursor: default;
}

.note {
  margin-left:  1em;
  margin-right: 1em;
}

.note p:first-child {
  margin-top: 0;
}

.note p:last-child {
  margin-bottom: 0.75em;
}

.divider {
  color: #bbb;
  text-align: center;
  font-size: 2em;
  margin-top:    1em;
  margin-bottom: 1em;
}

.book-cover .cover {
  float: right;
  max-width:  180px;
  max-height: 300px;
  margin-top: 10px;
  margin-left: 10px;
  margin-bottom: 10px;
  box-shadow: 0px 5px 5px rgba(0,0,0,0.25);
}

.book-card .cover {
  max-width: 140px;
  max-height: 130px;
  box-shadow: 0px 2.5px 2.5px rgba(0,0,0,0.25);
  margin: 0px 36px 12px 0px;
}

.book_thumbnail {
  float: left;
}
.cover-placeholder {
  background: #1C5154;
  display: inline-block;
  border-radius: 2px;
  box-shadow: 5px -5px white, 2px -2px white,3px -3px white, 8px -7px #1C5154 !important;
  width: 85px;
  height: 130px;
}
.cover-placeholder:before {
  content: '';
  display: inline-block;
  margin-top: 20px;
  height: 23%;
  width: 75%;
  background-color: #C3534B;
  border: 3px solid #CFBD6E;
  border-radius: 2px;
}

#jump_to {
  margin-bottom: -0.5em;
}

#stats-section svg {
  margin-left: auto;
  margin-right: auto;
  padding-left: 120px;
}
#stats-section svg rect {
  outline: 1px solid rgba(27,31,35,.02);
  outline-offset: -1px;
  rx: 2px;
  ry: 2px;
}
#stats-section table {
  margin-left: auto;
  margin-right: auto;
}
#stats-section table th {
  text-align: right;
}
#stats-section input[type=checkbox], #social-article input[type=checkbox] {
    height: 0;
    width: 0;
    visibility: hidden;
    position: absolute;
}

#stats-section label#toggle, #social-article label#toggle {
    cursor: pointer;
    text-indent: -9999px;
    width: 50px;
    height: 28px;
    display: block;
    border-radius: 100px;
    position: relative;
}

#stats-section label#toggle {
    background: #990000;
}

#social-article label#toggle {
  background: rgb(29, 161, 242)
}

#stats-section label#toggle:after, #social-article label#toggle:after {
    content: '';
    position: absolute;
    top: 5px;
    left: 5px;
    width: 18px;
    height: 18px;
    background: #fff;
    border-radius: 18px;
    transition: 0.3s ease;
}

#stats-section input:checked + #stats label {
    background: #007171;
}

#social-article input:checked + #social label {
    background: #444b5d;
}

#stats-section input:checked + #stats label:after, #social-article input:checked + #social label:after {
    left: calc(100% - 5px);
    transform: translateX(-100%);
}

#stats-section input + #stats #book-stats, #stats-section input:checked + #stats #page-stats,
#social-article input + #social #twitter, #social-article input:checked + #social #mastodon {
  display: flex
}

#stats-section input + #stats #page-stats, #stats-section input:checked + #stats #book-stats,
#social-article input + #social #mastodon, #social-article input:checked + #social #twitter {
  display: none
}
#stats-section input + #stats #label:before {
  content: "Books"
}

#stats-section input:checked + #stats #label:before {
  content: "Pages"
}
#social-article input + #social #label:before {
  content: "Twitter";
  font-family: sans-serif;
  font-size: 14px;
}
#social-article input:checked + #social #label:before {
  content: "Fedi";
  margin-right: 8px;
  font-family: sans-serif;
  font-size: 14px;
}

#stats-section label#toggle:active:after, #social-article label#toggle:active:after {
    width: 30px;
}

#stats, #social {
  position: relative;
}
#stats label#toggle, #stats #label {
  position: absolute;
  right: 6px;
  top: -48px;
}
#stats #label {
  top: -16px;
  margin-right: 2px;
}
#social label#toggle, #social #label {
  top: 12px;
  right: 6px;
  margin-right: 4px;
  position: absolute;
}
#social #label {
  position: absolute;
  right: 6px;
  top: 42px;
}
#social-article {
  margin-top: 18px;
}
#social #twitter, #social #mastodon {
  width: 500px;
  max-width: 90%;
  margin-left: auto;
  margin-right: auto;
  border: 1px solid #e1e8ed;
  border-radius: 4px;
  font-family: sans-serif;
  font-size: 16px;
  font-weight: normal;
  padding: 16px 32px;
  display: flex;
  flex-direction: column;
}
#social .header a {
  margin: 8px 0;
  display: flex;
  font-weight: normal;
}
#social .header img {
  width: 47px;
  height: 47px;
  margin-right: 12px;
}
#social .header .author {
  display: flex;
  flex-direction: column;
}
#social .header .author-name {
  font-weight: bold;
  font-size: 18px;
}
#social .footer {
  border-top: 1px solid #e1e8ed;
  padding-top: 12px;
  margin-top: 12px;
}
#social .footer a {
  display: flex;
  justify-content: space-around;
}
#social .footer svg {
  width: 1.25em;
  height: 1.25em;
  padding: 0 50px;
}
#social .footer svg#twitter-reply:hover path {
  fill: rgb(29, 161, 242);
}
#social .footer svg#twitter-fav:hover path {
  fill: rgb(224, 36, 94);
}
#social .footer svg#twitter-rt:hover path {
  fill: rgb(23, 191, 99);
}

#social #twitter {
  color: rgb(20, 23, 26);
  background-color: white;
  line-height: 1.5;
}
#social #twitter .header a {
  color: #1c2022;
}
#social #twitter .header a:hover .author-name {
  color: #3b94d9;
}
#social #twitter .header .author-nick {
  color: #697882
}
#social #twitter .footer svg path {
  fill: rgb(101, 119, 134);
}
#social #twitter .header img {
  border-radius: 50%;
}

#social #mastodon {
  color: rgb(217, 225, 232);
  background-color: #282c37;
}
#social #mastodon .header a {
  color: rgb(217, 225, 232);
}
#social #mastodon .header a:hover .author-name {
  text-decoration: underline;
}
#social #mastodon .header .author-nick {
  color: rgb(217, 225, 232);
}
#social #mastodon .footer svg path {
  fill: rgb(96, 105, 132);
}
#social #mastodon .header img {
  border-radius: 4px;
}
/* ... */

